# TEMPLATE-cmake_crossplatform

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_win64.sh  clear_builds.sh
src/: main.cpp
toolchains/: linux-toolchain.cmake  win64-toolchain.cmake
